--- a/src/components/Layout/DefaultLayout/Header/Header.module.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.module.scss
@@ -102,3 +102,17 @@
     right: 53px;
     background-color: transparent;
 }
+.action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.more-btn {
+    font-size: 2rem;
+    margin-left: 16px;
+    padding: 0 8px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+}
