--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,6 +5,7 @@
     --primary: #fe2c55;
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --default-layout-padding: 24px;
 }
 * {
     margin: 0;
