--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -16,3 +16,26 @@
 .custom-poper-wrapper {
     padding-bottom: 8px;
 }
+.header {
+    height: 50px;
+    position: relative;
+}
+.btn-back {
+    position: relative;
+    height: 100%;
+    margin-left: 10px;
+    padding: 0 10px 0 20px;
+    font-size: 1.6rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.6rem;
+    font-weight: 600;
+}
